build: add Docker configuration and update env example
- Add Dockerfile for containerized deployment
- Include .dockerignore to exclude unnecessary files
- Update .env.example with new environment variables for user management

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ NODE_ENV=
 JWT_SECRET=
 ADMIN_EMAIL=
 ADMIN_PASSWORD=
+ADMIN_EMAIL_TWO=a
+USER_VERIFIED_EMAIL=
+USER_VERIFIED_EMAIL_TWO=
+USER_UNVERIFIED_EMAIL=
+USER_PASSWORD=
